# try_py_lib

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
examples/: animal.py  func.py  hello.py
include/animal/: animal.h  bindings_animal.hpp  cat.h  dog.h
include/func/: bindings_func.hpp  func.hpp
include/numpy_func/: bindings_numpy_func.hpp  numpy_func.h
include/torch_func/: bindings_torch_func.hpp  torch_func.h
my_package/: __init__.py  torch_func.py
python/my_package/: __init__.py  animal.py  numpy_func.py  wrapper.py
src/: CMakeLists.txt  _core.cpp
src/animal/: CMakeLists.txt  cat.cpp  dog.cpp
src/numpy_func/: CMakeLists.txt  numpy_func.cpp
src/torch_func/: CMakeLists.txt  torch_func.cpp
tests/cpp/: CMakeLists.txt
tests/cpp/animal/: CMakeLists.txt  test_animal.cpp
tests/cpp/func/: CMakeLists.txt  test_add.cpp
tests/cpp/numpy_func/: CMakeLists.txt  test_numpy_func.cpp
tests/cpp/torch_func/: CMakeLists.txt  test_torch_func.cpp
tests/python/: test_animal.py  test_func.py  test_numpy_func.py  test_torch_func.py
